--- a/memory_agents/tests/graphiti_tools_available_test.html
+++ b/memory_agents/tests/graphiti_tools_available_test.html
@@ -162,7 +162,7 @@ while necessary query and retrieval tools are available.</p>
                 <section id="ALLOWED_TOOLS">
                     <div class="attr variable">
             <span class="name">ALLOWED_TOOLS</span>        =
-<span class="default_value">{&#39;search_nodes&#39;, &#39;get_status&#39;, &#39;get_episodes&#39;, &#39;get_entity_edge&#39;, &#39;search_memory_facts&#39;}</span>
+<span class="default_value">{&#39;search_nodes&#39;, &#39;get_episodes&#39;, &#39;search_memory_facts&#39;, &#39;get_status&#39;, &#39;get_entity_edge&#39;}</span>
 
         
     </div>
