deploy: ce348a5f5f0ab488fa54f83a0355ae961eea719c

--- a/memory_agents/tests/graphiti_tools_available_test.html
+++ b/memory_agents/tests/graphiti_tools_available_test.html
@@ -162,7 +162,7 @@ while necessary query and retrieval tools are available.</p>
                 <section id="ALLOWED_TOOLS">
                     <div class="attr variable">
             <span class="name">ALLOWED_TOOLS</span>        =
-<span class="default_value">{&#39;get_entity_edge&#39;, &#39;get_episodes&#39;, &#39;search_nodes&#39;, &#39;get_status&#39;, &#39;search_memory_facts&#39;}</span>
+<span class="default_value">{&#39;get_entity_edge&#39;, &#39;search_memory_facts&#39;, &#39;search_nodes&#39;, &#39;get_status&#39;, &#39;get_episodes&#39;}</span>
 
         
     </div>
@@ -174,7 +174,7 @@ while necessary query and retrieval tools are available.</p>
                 <section id="DISALLOWED_TOOLS">
                     <div class="attr variable">
             <span class="name">DISALLOWED_TOOLS</span>        =
-<span class="default_value">{&#39;delete_episode&#39;, &#39;clear_graph&#39;, &#39;delete_entity_edge&#39;}</span>
+<span class="default_value">{&#39;delete_episode&#39;, &#39;delete_entity_edge&#39;, &#39;clear_graph&#39;}</span>
 
         
     </div>
